--- a/package.json
+++ b/package.json
@@ -4,24 +4,14 @@
   "description": "",
   "main": "serenity.user.js",
   "scripts": {
-    "build": "webpack",
-    "watch": "webpack --watch",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "node build.js",
+    "watch": "node build.js --watch"
   },
   "keywords": [],
-  "author": "",
+  "author": "Serenity Development",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.28.0",
-    "@babel/preset-env": "^7.28.0",
-    "babel-loader": "^10.0.0",
-    "css-loader": "^7.1.2",
-    "html-webpack-plugin": "^5.6.3",
-    "style-loader": "^4.0.0",
-    "watch": "^1.0.2",
-    "webpack": "^5.100.2",
-    "webpack-cli": "^6.0.1",
-    "webpack-dev-server": "^5.2.2",
-    "webpack-userscript": "^3.2.3"
+    "esbuild": "^0.21.4",
+    "esbuild-style-plugin": "^1.6.3"
   }
 }
