--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "serenity-bloxd",
   "version": "1.0.0",
   "description": "",
-  "main": "serenity.user.js",
+  "main": "Serenity.js",
   "scripts": {
     "build": "node build.js",
     "watch": "node build.js --watch"
