--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   "author": "Serenity Development",
   "license": "ISC",
   "devDependencies": {
-    "esbuild": "^0.21.4",
-    "esbuild-style-plugin": "^1.6.3"
+    "esbuild": "^0.21.4"
   }
 }
