--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "keywords": [],
   "author": "Serenity Development",
-  "license": "ISC",
+  "license": "GPL-3.0-only",
   "devDependencies": {
     "esbuild": "^0.21.4"
   }
