--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
   "license": "GPL-3.0-only",
   "devDependencies": {
     "esbuild": "^0.21.4"
+  },
+  "dependencies": {
+    "gl-matrix": "^3.4.3"
   }
 }
